--- a/_modules/TermTk/TTkCore/signal.html
+++ b/_modules/TermTk/TTkCore/signal.html
@@ -196,7 +196,7 @@
 <span class="c1">#      https://github.com/ceccopierangiolieugenio/pyCuT/blob/master/cupy/CuTCore/CuSignal.py</span>
 
 <span class="sd">&#39;&#39;&#39;</span>
-<span class="sd">Signals &amp; Slots [`Tutorial &lt;https://github.com/ceccopierangiolieugenio/pyTermTk/blob/main/tutorial/003-signalslots.md&gt;`_]</span>
+<span class="sd">Signals &amp; Slots [`Tutorial &lt;https://ceccopierangiolieugenio.github.io/pyTermTk/tutorial/003-signalslots.html&gt;`_]</span>
 <span class="sd">=========================================================================================================================</span>
 
 <span class="sd">  Signals and slots are used for communication between objects.</span>
