--- a/_modules/TermTk/TTkGui/theme.html
+++ b/_modules/TermTk/TTkGui/theme.html
@@ -198,6 +198,7 @@
     <span class="sd">&#39;&#39;&#39; from: https://en.wikipedia.org/wiki/Box-drawing_character</span>
 
 <span class="sd">    ::</span>
+
 <span class="sd">        ┌─┬┐  ╔═╦╗  ╓─╥╖  ╒═╤╕</span>
 <span class="sd">        │ ││  ║ ║║  ║ ║║  │ ││</span>
 <span class="sd">        ├─┼┤  ╠═╬╣  ╟─╫╢  ╞═╪╡</span>
@@ -256,6 +257,7 @@
     <span class="sd">&#39;&#39;&#39; Grid Types</span>
 
 <span class="sd">    ::</span>
+
 <span class="sd">        grid0  grid1  grid2  grid3</span>
 <span class="sd">        ┌─┬┐   ╔═╦╗   ╔═╤╗   ┌─╥┐</span>
 <span class="sd">        │ ││   ║ ║║   ║ │║   │ ║│</span>
@@ -288,6 +290,8 @@
        <span class="s1">&#39;│&#39;</span><span class="p">,</span><span class="s1">&#39; &#39;</span><span class="p">,</span><span class="s1">&#39;│&#39;</span><span class="p">,</span>
        <span class="s1">&#39;╘&#39;</span><span class="p">,</span><span class="s1">&#39;═&#39;</span><span class="p">,</span><span class="s1">&#39;╛&#39;</span><span class="p">))</span>
     <span class="sd">&#39;&#39;&#39;</span>
+<span class="sd">    ::</span>
+
 <span class="sd">        box0   box1</span>
 <span class="sd">        ┌─┐    ┌─┐</span>
 <span class="sd">        │ │    │ │</span>
@@ -316,6 +320,7 @@
     <span class="sd">&#39;&#39;&#39; Tab Examples</span>
 
 <span class="sd">    ::</span>
+
 <span class="sd">          ┌──────╔══════╗──────┬──────┐      ┌─┌──────╔══════╗──────┬──────┐─┐</span>
 <span class="sd">          │Label1║Label2║Label3│Label4│      │◀│Label1║Label2║Label3│Label4│▶│</span>
 <span class="sd">        ╞═╧══════╩══════╩══════╧══════╧════╡ ╞═╧══════╩══════╩══════╧══════╧═╡</span>
