--- a/_modules/TermTk/TTkGui/theme.html
+++ b/_modules/TermTk/TTkGui/theme.html
@@ -244,7 +244,11 @@
         <span class="s1">&#39;└&#39;</span><span class="p">,</span><span class="s1">&#39;─&#39;</span><span class="p">,</span><span class="s1">&#39;╨&#39;</span><span class="p">,</span><span class="s1">&#39;┘&#39;</span><span class="p">),</span>
       <span class="p">(),</span> <span class="c1"># TODO: Grid 4</span>
       <span class="p">(),</span> <span class="c1"># TODO: Grid 5</span>
-      <span class="p">(),</span> <span class="c1"># TODO: Grid 6</span>
+      <span class="p">(</span> <span class="c1"># Grid 6</span>
+        <span class="s1">&#39;╓&#39;</span><span class="p">,</span><span class="s1">&#39;─&#39;</span><span class="p">,</span><span class="s1">&#39;┬&#39;</span><span class="p">,</span><span class="s1">&#39;┐&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;║&#39;</span><span class="p">,</span><span class="s1">&#39; &#39;</span><span class="p">,</span><span class="s1">&#39;│&#39;</span><span class="p">,</span><span class="s1">&#39;│&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;╟&#39;</span><span class="p">,</span><span class="s1">&#39;─&#39;</span><span class="p">,</span><span class="s1">&#39;┼&#39;</span><span class="p">,</span><span class="s1">&#39;┤&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;╚&#39;</span><span class="p">,</span><span class="s1">&#39;═&#39;</span><span class="p">,</span><span class="s1">&#39;╧&#39;</span><span class="p">,</span><span class="s1">&#39;╛&#39;</span><span class="p">),</span>
       <span class="p">(),</span> <span class="c1"># TODO: Grid 7</span>
       <span class="p">(),</span> <span class="c1"># TODO: Grid 8</span>
       <span class="p">(</span> <span class="c1"># Grid 9 ╒═╤╕</span>
