--- a/_modules/TermTk/TTkWidgets/menubar.html
+++ b/_modules/TermTk/TTkWidgets/menubar.html
@@ -311,7 +311,7 @@
         <span class="n">listw</span> <span class="o">=</span> <span class="n">TTkList</span><span class="p">(</span><span class="n">parent</span><span class="o">=</span><span class="n">frame</span><span class="p">,</span> <span class="n">listWidget</span> <span class="o">=</span> <span class="n">menuListWidget</span><span class="p">)</span>
         <span class="c1"># listw.textClicked.connect(self._menuCallback)</span>
         <span class="c1"># listw.textClicked.connect(self._menuCallback)</span>
-        <span class="n">TTkLog</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">_menu</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+        <span class="c1"># TTkLog.debug(f&quot;{self._menu}&quot;)</span>
         <span class="k">for</span> <span class="n">item</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_menu</span><span class="p">:</span>
             <span class="n">listw</span><span class="o">.</span><span class="n">addItem</span><span class="p">(</span><span class="n">item</span><span class="p">)</span>
         <span class="n">TTkHelper</span><span class="o">.</span><span class="n">overlay</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">frame</span><span class="p">,</span> <span class="n">pos</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">pos</span><span class="p">[</span><span class="mi">1</span><span class="p">])</span>
