--- a/autogen.TermTk/TermTk.TTkWidgets.button.html
+++ b/autogen.TermTk/TermTk.TTkWidgets.button.html
@@ -41,7 +41,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="TermTk.TTkWidgets.checkbox" href="TermTk.TTkWidgets.checkbox.html" />
-    <link rel="prev" title="TermTk.TTkWidgets.TTkPickers.colorpicker" href="TermTk.TTkWidgets.TTkPickers.colorpicker.html" /> 
+    <link rel="prev" title="TermTk.TTkWidgets.TTkPickers.dateTimePicker" href="TermTk.TTkWidgets.TTkPickers.dateTimePicker.html" /> 
 </head>
 
 <body class="wy-body-for-nav">
@@ -280,7 +280,7 @@ ths need to be overridden in the widget.</p>
           <footer>
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
         <a href="TermTk.TTkWidgets.checkbox.html" class="btn btn-neutral float-right" title="TermTk.TTkWidgets.checkbox" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
-        <a href="TermTk.TTkWidgets.TTkPickers.colorpicker.html" class="btn btn-neutral float-left" title="TermTk.TTkWidgets.TTkPickers.colorpicker" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="TermTk.TTkWidgets.TTkPickers.dateTimePicker.html" class="btn btn-neutral float-left" title="TermTk.TTkWidgets.TTkPickers.dateTimePicker" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
     </div>
 
   <hr/>
