--- a/genindex.html
+++ b/genindex.html
@@ -445,6 +445,8 @@
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkPickers.colorpicker.html#module-TermTk.TTkWidgets.TTkPickers.colorpicker">TermTk.TTkWidgets.TTkPickers.colorpicker</a>
 </li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkPickers.dateTimePicker.html#module-TermTk.TTkWidgets.TTkPickers.dateTimePicker">TermTk.TTkWidgets.TTkPickers.dateTimePicker</a>
+</li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.widget.html#module-TermTk.TTkWidgets.widget">TermTk.TTkWidgets.widget</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.window.html#module-TermTk.TTkWidgets.window">TermTk.TTkWidgets.window</a>
@@ -534,6 +536,8 @@
 
       <ul>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.paintEvent">(TTkCheckbox method)</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkPickers.colorpicker.html#TermTk.TTkWidgets.TTkPickers.colorpicker.TTkColorDialogPicker.paintEvent">(TTkColorDialogPicker method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.combobox.html#TermTk.TTkWidgets.combobox.TTkComboBox.paintEvent">(TTkComboBox method)</a>
 </li>
@@ -1112,6 +1116,13 @@
 
       <ul>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkPickers.colorpicker.html#module-TermTk.TTkWidgets.TTkPickers.colorpicker">module</a>
+</li>
+      </ul></li>
+      <li>
+    TermTk.TTkWidgets.TTkPickers.dateTimePicker
+
+      <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkPickers.dateTimePicker.html#module-TermTk.TTkWidgets.TTkPickers.dateTimePicker">module</a>
 </li>
       </ul></li>
       <li>
