--- a/_modules/TermTk/TTkAbstract/abstractscrollview.html
+++ b/_modules/TermTk/TTkAbstract/abstractscrollview.html
@@ -250,6 +250,7 @@
         <span class="k">return</span> <span class="kc">True</span></div>
 
 <div class="viewcode-block" id="TTkAbstractScrollView.resizeEvent"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkAbstract.abstractscrollview.html#TermTk.TTkAbstract.abstractscrollview.TTkAbstractScrollView.resizeEvent">[docs]</a>    <span class="k">def</span> <span class="nf">resizeEvent</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">w</span><span class="p">,</span> <span class="n">h</span><span class="p">):</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">viewMoveTo</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_viewOffsetX</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_viewOffsetY</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">viewSizeChanged</span><span class="o">.</span><span class="n">emit</span><span class="p">(</span><span class="n">w</span><span class="p">,</span><span class="n">h</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">viewChanged</span><span class="o">.</span><span class="n">emit</span><span class="p">()</span></div>
 
