--- a/_modules/TermTk/TTkCore/signal.html
+++ b/_modules/TermTk/TTkCore/signal.html
@@ -218,7 +218,7 @@
 <span class="sd">|  A slot is a function that is called in response to a particular signal.</span>
 <span class="sd">|  `TermTk &lt;https://github.com/ceccopierangiolieugenio/pyTermTk&gt;`_&#39;s :mod:`~TermTk.TTkWidgets` have many predefined signals/slots, but it is possible to subclass any :mod:`~TermTk.TTkWidgets` and add our own signals/slots to them.</span>
 
-<span class="sd">.. image:: /_static/Signal.Slots.001.svg</span>
+<span class="sd">.. image:: /../_images/Signal.Slots.001.svg</span>
 
 <span class="sd">Methods</span>
 <span class="sd">=======</span>
